adds output for converted training data to jupyter notebook

--- a/get_corpus_comparison_lists.ipynb
+++ b/get_corpus_comparison_lists.ipynb
@@ -566,13 +566,13 @@
     "#                 print(sent)\n",
     "            else:\n",
     "                continue\n",
-    "        with open(output_file, \"a\") as outfile:\n",
-    "            for line in metadata:\n",
-    "                outfile.write(line)\n",
-    "            for sent in sentence[1][1:]:\n",
-    "#                 print(sent)\n",
-    "                outfile.write(\"\\t\".join(sent))\n",
-    "            outfile.write(\"\\n\")\n",
+    "#         with open(output_file, \"a\") as outfile:\n",
+    "#             for line in metadata:\n",
+    "#                 outfile.write(line)\n",
+    "#             for sent in sentence[1][1:]:\n",
+    "# #                 print(sent)\n",
+    "#                 outfile.write(\"\\t\".join(sent))\n",
+    "#             outfile.write(\"\\n\")\n",
     "            "
    ]
   },
@@ -591,7 +591,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def apply_wsj_conversions(input_file, output_file, conversion_dictionary):\n",
+    "def apply_wsj_conversions(input_file, conversion_dictionary, threshold):\n",
+    "    \n",
+    "    output_file = input_file+\"_converted.conllu\"\n",
     "    with open(input_file) as infile:\n",
     "        lines = infile.readlines()\n",
     "    sentences = []\n",
@@ -630,20 +632,23 @@
     "#                 print(triple)\n",
     "#                 print(conversion_dictionary.get(triple))\n",
     "                new_relation = conversion_dictionary[triple][\"most_common_label_other\"]\n",
+    "                other_proportion = conversion_dictionary[triple][\"proportion_other\"]\n",
     "#                 print(\"OLD:\\t\"+relation)\n",
     "#                 print(\"NEW:\\t\"+new_relation)\n",
     "#                 print(sent)\n",
-    "                sent[7] = new_relation\n",
+    "#                 print(other_proportion)\n",
+    "                if other_proportion >= threshold:\n",
+    "                    sent[7] = new_relation\n",
     "#                 print(sent)\n",
     "            else:\n",
     "                continue\n",
-    "        with open(output_file, \"a\") as outfile:\n",
-    "            for line in metadata:\n",
-    "                outfile.write(line)\n",
-    "            for sent in sentence[1]:\n",
-    "#                 print(sent)\n",
-    "                outfile.write(\"\\t\".join(sent))\n",
-    "            outfile.write(\"\\n\")\n",
+    "#         with open(output_file, \"a\") as outfile:\n",
+    "#             for line in metadata:\n",
+    "#                 outfile.write(line)\n",
+    "#             for sent in sentence[1]:\n",
+    "# #                 print(sent)\n",
+    "#                 outfile.write(\"\\t\".join(sent))\n",
+    "#             outfile.write(\"\\n\")\n",
     "            "
    ]
   },
@@ -673,7 +678,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "apply_wsj_conversions(dev_file, converted_dev_file, dev_conversion)"
+    "apply_wsj_conversions(dev_file, dev_conversion, 0.5)"
    ]
   },
   {
