update ipynb files for maybe hpc

--- a/add_noise_to_data.ipynb
+++ b/add_noise_to_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "id": "63843d88",
    "metadata": {},
    "outputs": [],
@@ -13,18 +13,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "id": "6078d2ed",
    "metadata": {},
    "outputs": [],
    "source": [
     "# language = \"gd\"\n",
-    "language = \"ga\""
+    "# language = \"ga\"\n",
+    "# language = \"hr\"\n",
+    "# language = \"sl\"\n",
+    "language = \"es\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
+   "id": "1ff5f2b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_sents = 1000\n",
+    "dev_sents = 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "id": "6735bfa6",
    "metadata": {},
    "outputs": [],
@@ -37,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "id": "6a9ff492",
    "metadata": {},
    "outputs": [],
@@ -50,94 +64,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
+   "id": "da3148c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if language == \"hr\":\n",
+    "    directory = \"data/UD_Croatian-SET/\"\n",
+    "    train_file = directory+\"hr_set-ud-train.conllu\"\n",
+    "    dev_file = directory+\"hr_set-ud-dev.conllu\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "46c2ce67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if language == \"sl\":\n",
+    "    directory = \"data/UD_Slovenian-SSJ/\"\n",
+    "    train_file = directory+\"sl_ssj-ud-train.conllu\"\n",
+    "    dev_file = directory+\"sl_ssj-ud-dev.conllu\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "158bfbeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if language == \"es\":\n",
+    "    directory = \"data/UD_Spanish-AnCora/\"\n",
+    "    train_file = directory+\"es_ancora-ud-train.conllu\"\n",
+    "    dev_file = directory+\"es_ancora-ud-dev.conllu\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "id": "a41f9f2e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# if language == \"en\":\n",
-    "#     directory = \"data/ud-en-gum/\"\n",
-    "#     train_file = directory+\"\"\n",
-    "#     dev_file = directory+\"\""
+    "if language == \"ca\":\n",
+    "    directory = \"data/UD_Catalan-AnCora/\"\n",
+    "    train_file = directory+\"ca_ancora-ud-train.conllu\"\n",
+    "    dev_file = directory+\"ca_ancora-ud-dev.conllu\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "id": "7ce05a59",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# noise_method = \"none\"\n",
-    "# noise_method = \"freq\"\n",
-    "noise_method = 10"
+    "# noise_method = [\"none\", \"freq\"]\n",
+    "noise_method = [10, 20, 30, 40, 50]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "01610ff0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_outfile = \"train_data/\"+language+\"/\"+language+\"_noise=\"+str(noise_method)+\"-ud-train.conllu\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "e983a69f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dev_outfile = \"dev_data/\"+language+\"/\"+language+\"_noise=\"+str(noise_method)+\"-ud-dev.conllu\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "a395cd0b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'train_data/ga/ga_noise=none-ud-train.conllu'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_outfile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "3ac57095",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'dev_data/ga/ga_noise=none-ud-dev.conllu'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dev_outfile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "id": "80289ff4",
    "metadata": {},
    "outputs": [],
@@ -147,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "id": "5855e5d7",
    "metadata": {},
    "outputs": [],
@@ -157,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "id": "507ab8a6",
    "metadata": {},
    "outputs": [
@@ -165,16 +155,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No noise will be added to the data! Original data will be output!\n",
+      "total sentences in file:  14305\n",
+      "Noise method:  randomly replace 10% of relations (3,341 out of 33,411 overall).\n",
       "\n",
-      "Writing data to 'train_data/ga/ga_noise=none-ud-train.conllu'...\n"
+      "Writing data to 'train_data/es/es_noise=10_tokens-ud-train.conllu'...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████| 4005/4005 [00:00<00:00, 23241.75it/s]"
+      "100%|███████████████████████████████████████| 1000/1000 [25:20<00:00,  1.52s/it]\n"
      ]
     },
     {
@@ -182,7 +173,178 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "0 lines changed out of 95,881 total lines (0.0%)\n"
+      "3,341 lines changed out of 33,411 total lines (9.999700697375117%)\n",
+      "total sentences in file:  1654\n",
+      "Noise method:  randomly replace 10% of relations (3,484 out of 34,840 overall).\n",
+      "\n",
+      "Writing data to 'dev_data/es/es_noise=10_tokens-ud-dev.conllu'...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████| 1000/1000 [03:09<00:00,  5.28it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "3,484 lines changed out of 34,840 total lines (10.0%)\n",
+      "total sentences in file:  14305\n",
+      "Noise method:  randomly replace 20% of relations (6,682 out of 33,411 overall).\n",
+      "\n",
+      "Writing data to 'train_data/es/es_noise=20_tokens-ud-train.conllu'...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████| 1000/1000 [56:54<00:00,  3.41s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "6,682 lines changed out of 33,411 total lines (19.999401394750233%)\n",
+      "total sentences in file:  1654\n",
+      "Noise method:  randomly replace 20% of relations (6,968 out of 34,840 overall).\n",
+      "\n",
+      "Writing data to 'dev_data/es/es_noise=20_tokens-ud-dev.conllu'...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████| 1000/1000 [06:14<00:00,  2.67it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "6,968 lines changed out of 34,840 total lines (20.0%)\n",
+      "total sentences in file:  14305\n",
+      "Noise method:  randomly replace 30% of relations (10,023 out of 33,411 overall).\n",
+      "\n",
+      "Writing data to 'train_data/es/es_noise=30_tokens-ud-train.conllu'...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████| 1000/1000 [1:25:12<00:00,  5.11s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "10,023 lines changed out of 33,411 total lines (29.999102092125344%)\n",
+      "total sentences in file:  1654\n",
+      "Noise method:  randomly replace 30% of relations (10,452 out of 34,840 overall).\n",
+      "\n",
+      "Writing data to 'dev_data/es/es_noise=30_tokens-ud-dev.conllu'...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████| 1000/1000 [09:19<00:00,  1.79it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "10,452 lines changed out of 34,840 total lines (30.0%)\n",
+      "total sentences in file:  14305\n",
+      "Noise method:  randomly replace 40% of relations (13,364 out of 33,411 overall).\n",
+      "\n",
+      "Writing data to 'train_data/es/es_noise=40_tokens-ud-train.conllu'...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████| 1000/1000 [1:53:10<00:00,  6.79s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "13,364 lines changed out of 33,411 total lines (39.998802789500466%)\n",
+      "total sentences in file:  1654\n",
+      "Noise method:  randomly replace 40% of relations (13,936 out of 34,840 overall).\n",
+      "\n",
+      "Writing data to 'dev_data/es/es_noise=40_tokens-ud-dev.conllu'...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████| 1000/1000 [12:14<00:00,  1.36it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "13,936 lines changed out of 34,840 total lines (40.0%)\n",
+      "total sentences in file:  14305\n",
+      "Noise method:  randomly replace 50% of relations (16,705 out of 33,411 overall).\n",
+      "\n",
+      "Writing data to 'train_data/es/es_noise=50_tokens-ud-train.conllu'...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████| 1000/1000 [2:21:53<00:00,  8.51s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "16,705 lines changed out of 33,411 total lines (49.99850348687558%)\n",
+      "total sentences in file:  1654\n",
+      "Noise method:  randomly replace 50% of relations (17,420 out of 34,840 overall).\n",
+      "\n",
+      "Writing data to 'dev_data/es/es_noise=50_tokens-ud-dev.conllu'...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████| 1000/1000 [15:19<00:00,  1.09it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "17,420 lines changed out of 34,840 total lines (50.0%)\n"
      ]
     },
     {
@@ -194,50 +356,20 @@
     }
    ],
    "source": [
-    "f.add_noise_to_data(train_file, train_relations, train_tokens_with_relations, noise_method, train_outfile)"
+    "for i in noise_method:\n",
+    "    train_outfile = \"train_data/\"+language+\"/\"+language+\"_noise=\"+str(i)+\"_tokens-ud-train.conllu\"    \n",
+    "    f.add_noise_to_data(train_file, train_relations, train_tokens_with_relations, i, train_outfile, train_sents)\n",
+    "    dev_outfile = \"dev_data/\"+language+\"/\"+language+\"_noise=\"+str(i)+\"_tokens-ud-dev.conllu\"    \n",
+    "    f.add_noise_to_data(dev_file, dev_relations, dev_tokens_with_relations, i, dev_outfile, dev_sents)    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "313a43c0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No noise will be added to the data! Original data will be output!\n",
-      "\n",
-      "Writing data to 'dev_data/ga/ga_noise=none-ud-dev.conllu'...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████| 451/451 [00:00<00:00, 19656.37it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "0 lines changed out of 10,000 total lines (0.0%)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "f.add_noise_to_data(dev_file, dev_relations, dev_tokens_with_relations, noise_method, dev_outfile)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
